@@ -120,23 +120,20 @@ fi
 
 AC_ARG_WITH(apache-libexecdir,
             [AS_HELP_STRING([[--with-apache-libexecdir[=PATH]]],
-                            [Install Apache modules to PATH instead of Apache's
-                             configured modules directory; PATH "no"
-                             or --without-apache-libexecdir means install
-                             to LIBEXECDIR.])],
-[
-    APACHE_LIBEXECDIR="$withval"
-])
+                            [Install Apache modules to Apache's configured
+                             modules directory instead of LIBEXECDIR;
+                             if PATH is given, install to PATH.])],
+[APACHE_LIBEXECDIR="$withval"],[APACHE_LIBEXECDIR='no'])
 
 INSTALL_APACHE_MODS=false
 if test -n "$APXS" && test "$APXS" != "no"; then
     APXS_CC="`$APXS -q CC`"
     APACHE_INCLUDES="$APACHE_INCLUDES -I$APXS_INCLUDE"
 
-    if test -z "$APACHE_LIBEXECDIR"; then
-        APACHE_LIBEXECDIR="`$APXS -q libexecdir`"
-    elif test "$APACHE_LIBEXECDIR" = 'no'; then
+    if test "$APACHE_LIBEXECDIR" = 'no'; then
         APACHE_LIBEXECDIR="$libexecdir"
+    elif test "$APACHE_LIBEXECDIR" = 'yes'; then
+        APACHE_LIBEXECDIR="`$APXS -q libexecdir`"
     fi
 
     BUILD_APACHE_RULE=apache-mod
